wikijs_namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wikijs
  labels:
    name: wikijs
