wikijs_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs-svc
  namespace: wikijs
spec:
  type: LoadBalancer
  selector:
    app: wikijs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
