wikijs_ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  namespace: wikijs
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https

spec:
  rules:
  - host: wiki.darkleafygreens.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs-svc
            port:
              number: 80
