wikijs_nginx_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  annotations:
    kubenetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wiki.darkleafygreens.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            service:
              name: wikijs-svc
              port: 
                number: 80
